--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "baseUrl": "src"
-  }
+    "baseUrl": "src",
+    "outDir": "dist"
+  },
+  "include": ["src/some-utils/geom/Interval.ts"]
 }
